# loaborplots

./: ltspicelab3.csv  mess2lab4high.csv  messung1lab4.csv  messung2lab4.csv  performancnumber.py  plotb4.py  plotbodelab4messung  pyproject.toml
alt/: Tau Zeitkonstante RC einfach.csv  ltspice1ordnung.csv  messung1.ordnung.csv  messung2.ordnung.csv  plot_bode.py  plot_vüberhz.py  plotbodeltspice.py  plotbodemessung.py  plotbodemessungfuervergleich.py  plotbodemessungverdoppelt.py  plotkondensator.py  plotkondensatorladekurve.py  weg_kondensator.csv
alt3/: plotbodelab3.py  plotbodelab3messung.py  plotperformance.py  wertelab3Messung.csv
alt4/: ltspicelab4.csv  plotbodelab4.py
