[project]
name = "Plot-f-r-labor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "J4nickH", email = "ha1220@mci4me.at"},
]
dependencies = ["numpy>=2.3.0", "pandas>=2.3.0", "matplotlib>=3.10.3", "scipy>=1.15.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
